syntax = "proto3";
package llm;

service LlmService {
  rpc GetCompletion (PromptRequest) returns (PromptResponse);
}

message PromptRequest {
  string prompt = 1;
}

message PromptResponse {
  string result = 1;
}
